@@ -1,5 +1,5 @@
 ;; Mirko Vukovic
-;; Time-stamp: <2012-11-05 22:39:22Eastern Standard Time column-major-table-classes.lisp>
+;; Time-stamp: <2012-11-07 21:27:53Eastern Standard Time column-major-table-classes.lisp>
 ;; 
 ;; Copyright 2011 Mirko Vukovic
 ;; Distributed under the terms of the GNU General Public License
@@ -59,15 +59,6 @@ name and column type"
     (assert-number-equal 1 (i-column (second schema)))
     (assert-number-equal 5 (length schema))))
 
-
-(defgeneric column-names (object)
-  (:documentation "Return list of column names.  OBJECT can be a table
-  or a schema")
-  (:method ((schema cons))
-    (loop :for column-def in schema
-	 :collect (name column-def)))
-  (:method ((table column-major-table))
-    (column-names (table-schema table))))
 
 (defmethod column-documentation ((column-name symbol)
 				  (table column-major-table))
